--- a/index.html
+++ b/index.html
@@ -167,7 +167,6 @@
       </div>
     </main>
 
-    
     <!-- ABOUT / STRUCTURE -->
     <section class="Structure">
       <div class="hero">
@@ -193,16 +192,30 @@
             </h1>
 
             <div class="tabs">
-              <button class="active">Our Mission</button>
-              <button>Our Vision</button>
-              <button>Our Journey</button>
+              <button class="active" data-tab="mission">Our Mission</button>
+              <button data-tab="vision">Our Vision</button>
+              <button data-tab="journey">Our Journey</button>
             </div>
 
-            <p class="desc" data-aos="fade-left" data-aos-delay="100">
-              Our mission is to help businesses grow online by building powerful
-              digital marketing campaigns that attract, engage, and convert the
-              right audience at every stage of the funnel.
-            </p>
+            <div class="tab-content">
+              <p class="desc active" id="mission">
+                Our mission is to help businesses grow online by creating
+                strategic digital marketing campaigns that attract engage and
+                convert the right audience consistently worldwide.
+              </p>
+
+              <p class="desc" id="vision">
+                Our vision is to become a globally trusted digital growth
+                partner empowering brands through innovation data driven
+                strategies and long term sustainable success worldwide.
+              </p>
+
+              <p class="desc" id="journey">
+                Our journey began as a small passionate team and grew into a
+                full scale digital agency delivering results for startups
+                enterprises and global brands consistently worldwide.
+              </p>
+            </div>
 
             <div class="features">
               <div>
@@ -946,7 +959,7 @@
       AOS.init({ once: true, duration: 1000, easing: "ease-out-cubic" });
     </script>
     <!-- Swiper JS -->
-     
+
     <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
     <script src="./hamburger.js"></script>
     <script src="./swiper.js"></script>
