--- a/index.html
+++ b/index.html
@@ -198,20 +198,29 @@
             </div>
 
             <div class="tab-content">
-              <p class="desc active" id="mission">
-                Our mission is to help businesses grow online by creating
+              <p
+                class="desc active"
+                id="mission"
+              >
+                Our Mission is to help businesses grow online by creating
                 strategic digital marketing campaigns that attract engage and
                 convert the right audience consistently worldwide.
               </p>
 
-              <p class="desc" id="vision">
-                Our vision is to become a globally trusted digital growth
+              <p
+                class="desc"
+                id="vision"
+              >
+                Our Vision is to become a globally trusted digital growth
                 partner empowering brands through innovation data driven
                 strategies and long term sustainable success worldwide.
               </p>
 
-              <p class="desc" id="journey">
-                Our journey began as a small passionate team and grew into a
+              <p
+                class="desc"
+                id="journey"
+              >
+                Our Journey began as a small passionate team and grew into a
                 full scale digital agency delivering results for startups
                 enterprises and global brands consistently worldwide.
               </p>
